fixed formatting issue on mobile blog page

--- a/css/blog-media-queries.css
+++ b/css/blog-media-queries.css
@@ -309,15 +309,6 @@ p {
     padding-bottom: 1%;
 }
 
-ul {
-    font: 1.0em/170% 'din-lightregular';
-    width: 100%;
-    padding-left: 0;
-    padding-right: 0;
-    padding-top: 1%;
-    padding-bottom: 1%;
-}
-
 }
 
 .post-share {
